[Feature] UI : Created header for main UI
* [Chore] Formatting : Ran prettier formatter to format all files

* [Feature] Header: Created basic header design

* [Feature] Text: Added some text styling to the title

* [Fix] Indentation: Fixed indentation errors in CI.yml

* [Fix] CI: Installed bun to run CI

* [Fix] Formatting: Fixed up formatting with prettier

* [Fix] Prettier: Fixed up CI action to run prettier on all files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Build backend
         run: go build ./...
 
-     - name: Run backend tests (if any)
-       run: |
-        go test ./... || echo "No tests found"
+      - name: Run backend tests (if any)
+        run: |
+          go test ./... || echo "No tests found"
 
   frontend:
     runs-on: ubuntu-latest
@@ -44,6 +44,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18"
+
+      - name: Install Bun
+        run: |
+          curl -fsSL https://bun.sh/install | bash
+          echo "$HOME/.bun/bin" >> $GITHUB_PATH
 
       - name: Install deps
         run: bun install
