--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
         "format:check": "prettier --check ."
     },
     "dependencies": {
+        "@tanstack/react-query": "^5.81.5",
         "expo": "^53.0.13",
         "expo-constants": "~17.1.6",
         "expo-linking": "~7.1.5",
