--- a/client/package.json
+++ b/client/package.json
@@ -12,18 +12,23 @@
         "format:check": "prettier --check ."
     },
     "dependencies": {
+        "@react-native-async-storage/async-storage": "^2.2.0",
         "@tanstack/react-query": "^5.81.5",
         "expo": "^53.0.13",
         "expo-constants": "~17.1.6",
         "expo-linking": "~7.1.5",
-        "expo-router": "~5.1.1",
+        "expo-router": "^5.1.3",
+        "expo-secure-store": "~14.2.3",
         "expo-status-bar": "~2.2.3",
         "nativewind": "latest",
         "react": "19.0.0",
         "react-native": "0.79.4",
+        "react-native-keychain": "^10.0.0",
         "react-native-reanimated": "~3.17.4",
         "react-native-safe-area-context": "5.4.0",
-        "react-native-screens": "~4.11.1"
+        "react-native-screens": "~4.11.1",
+        "wretch": "^2.11.0",
+        "zod": "^4.0.5"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
