--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
         "expo": "^53.0.13",
         "expo-constants": "~17.1.6",
         "expo-linking": "~7.1.5",
-        "expo-router": "^5.1.3",
+        "expo-react-native-toastify": "^1.0.19",
+        "expo-router": "~5.1.3",
         "expo-secure-store": "~14.2.3",
         "expo-status-bar": "~2.2.3",
         "nativewind": "latest",
@@ -27,6 +28,7 @@
         "react-native-reanimated": "~3.17.4",
         "react-native-safe-area-context": "5.4.0",
         "react-native-screens": "~4.11.1",
+        "toastify-react-native": "^7.2.0",
         "wretch": "^2.11.0",
         "zod": "^4.0.5"
     },
