--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
         "expo-constants": "~17.1.6",
         "expo-linking": "~7.1.5",
         "expo-react-native-toastify": "^1.0.19",
-        "expo-router": "~5.1.3",
+        "expo-router": "^5.1.3",
         "expo-secure-store": "~14.2.3",
         "expo-status-bar": "~2.2.3",
         "nativewind": "latest",
