--- a/client/app.json
+++ b/client/app.json
@@ -9,7 +9,7 @@
         "experiments": {
             "tsconfigPaths": true
         },
-        "plugins": ["expo-router"],
+        "plugins": ["expo-router", "expo-secure-store"],
         "orientation": "portrait",
         "icon": "./assets/icon.png",
         "userInterfaceStyle": "light",
